<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">健知音</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_exercisepage">健身</string>
    <string name="title_activity_informationpage">个人资料</string>
    <string name="username">用户名：</string>
    <string name="birthday">生日：</string>
    <string name="gender">性别：</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="weight">体重：</string>
    <string name="height">身高：</string>
    <string name="weight_unit">KG</string>
    <string name="height_unit">CM</string>
    <string name="armlength">臂长：</string>
    <string name="steplength">步长：</string>
    <string name="mile_unit">M</string>
    <string name="please_input">请输入</string>
    <string name="title_activity_splashpage">闪屏动画</string>
    <string name="current_weight">当前体重：</string>
    <string name="bmi">体质指数：</string>
    <string name="calorie">卡路里：</string>
    <string name="plan_weight">目标体重：</string>
    <string name="plan_time">计划耗时：</string>
    <string name="time_unit">DAYS</string>
    <string name="package_type">请选择健身套餐：</string>
    <string name="title_activity_slimepage">减肥</string>
    <string name="exercise_type">运动类型：</string>
    <string name="step">行走步数：</string>
    <string name="distance">行走距离：</string>
    <string name="numbertogoal">距目标数：</string>
    <string name="pushup">俯卧撑数：</string>
    <string name="calorie_burn">热量消耗：</string>
    <string name="play_time">运动时间：</string>
    <string name="title_activity_assistantpage">个人助理</string>
    <string name="run_recorder">个人行走记录</string>
    <string name="today_steps">今日行走记录：</string>
    <string name="total_steps">行走总记录：</string>
    <string name="best_grades">个人最好成绩：</string>
    <string name="today_run_calories">今日热量消耗</string>
    <string name="today_distance">今日行走距离：</string>
    <string name="total_distance">行走总距离：</string>
    <string name="aerobics_recorder">个人俯卧撑记录</string>
    <string name="today_pushup">今日俯卧撑记录：</string>
    <string name="total_pushup">总俯卧撑记录：</string>
    <string name="set_step">设定目标步数：</string>
    <string name="set_pushup">设定目标俯卧撑数：</string>
    <string name="goal">目标设置</string>
    <string name="colon">:</string>
    <string name="my_diet">今日食谱</string>
    <string name="my_sports">今日健身计划</string>
    <string name="calories_balance">卡路里平衡</string>
    <string name="my_outcalories">卡路里总消耗：</string>
    <string name="my_incalories">卡路里总摄入：</string>
    <string name="diettitle">定制我的食谱</string>
    <string name="sportstitle">定制我的健身计划</string>
    <string name="temperature">环境温度：</string>
    <string name="humidity">相对湿度：</string>
    <string name="comfortable">环境舒适度：</string>
    <string name="suitable_sport">适合的运动：</string>
    <string name="diary_title">日志标题</string>
    <string name="diary_content">日志内容</string>
    <string name="healthydiary">个人健康日志</string>
    <string name="diary_menu_title">请选择对日志的操作</string>
    <string name="edit_title">查看或编辑日志</string>
    <string name="delete_title">删除日志</string>
    <string name="diary_date_title">创建时间</string>
    <string name="empty_value">这家伙可真懒，还没开始写日志呢</string>
    <string name="default_weight">100</string>
    <string name="fix_sportstask">每日固定健身任务</string>
    <string name="new_sportstask">今日新增健身任务</string>
    <string name="goal_days">达到目标天数：</string>
    <string name="average_weight">平均每日减重：</string>
    <string name="average_calories_burn">每日热量消耗：</string>
    <string name="today_totalcalories_burn">今日热量消耗：</string>
    <string name="title_activity_guidepage">引导</string>
    <string name="title_activity_settingspage">应用设置</string>
    <string name="inform_setting">个人资料设置</string>
    <string name="app_setting">应用程序设置</string>
    <string name="about">本应用由韩文轩设计开发\n感谢指导教师代飞老师</string>
    <string name="title_activity_search_datapage">健身统计图</string>
    <string name="tip_title">健康贴士</string>
    <string name="my_weighttype">身材类型：</string>
    <string name="update_aims">更新目标</string>
    <string name="blank"></string>

</resources>