<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingRight="5dp" >

    <ImageView
        android:id="@+id/run_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="5dp"
        android:src="@drawable/note" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:shrinkColumns="0" >

        <TableRow>

            <TextView
                android:id="@+id/run_recorder"
                style="@style/big_light_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/run_recorder" />
        </TableRow>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line" />

        <TableRow>

            <TextView
                android:id="@+id/today_steps"
                style="@style/normal_light_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today_steps" />

            <TextView
                android:id="@+id/my_today_steps"
                style="@style/normal_light_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/total_steps"
                style="@style/normal_light_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_steps" />

            <TextView
                android:id="@+id/my_total_steps"
                style="@style/normal_light_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/today_distance"
                style="@style/normal_light_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today_distance" />

            <TextView
                android:id="@+id/my_today_distance"
                style="@style/normal_light_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/total_distance"
                style="@style/normal_light_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_distance" />

            <TextView
                android:id="@+id/my_total_distance"
                style="@style/normal_light_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/best_steps"
                style="@style/normal_light_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/best_grades" />

            <TextView
                android:id="@+id/my_best_steps"
                style="@style/normal_light_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
    </TableLayout>

</LinearLayout>