<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingRight="5dp" >

    <ImageView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="5dp"
        android:src="@drawable/user" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:shrinkColumns="0" >

        <TableRow>

            <TextView
                android:id="@+id/username"
                style="@style/big_light_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username" />

            <TextView
                android:id="@+id/my_name"
                style="@style/big_light_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line" />

        <TableRow>

            <TextView
                android:id="@+id/current_weight"
                style="@style/normal_light_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_weight" />

            <TextView
                android:id="@+id/my_weight"
                style="@style/normal_light_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/plan_weight"
                style="@style/normal_light_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_weight" />

            <TextView
                android:id="@+id/my_planweight"
                style="@style/normal_light_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/step"
                style="@style/normal_light_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step" />

            <TextView
                android:id="@+id/my_step"
                style="@style/normal_light_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/pushup"
                style="@style/normal_light_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pushup" />

            <TextView
                android:id="@+id/my_pushup"
                style="@style/normal_light_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
    </TableLayout>

</LinearLayout>